fixed the button on night club, fixed the alignment on the form - had to change some of the css for the form to get it to work, also changed most of it from px to em , changed the background color on the 2 pages to grey — the em stuff may help the reactive part

--- a/src/App.css
+++ b/src/App.css
@@ -153,16 +153,21 @@ header a:hover {
 #inquiries-section {
   /* border: 2px solid pink; */
   background-color: rgb(37, 36, 36);
-  display: flex;
-  width: 100vw;
+  /* display: flex;
+  width: 100vw; */
   height: 100vh;
+
+  display: grid;
+grid-template-columns: 1fr 1fr;
+margin-top: -3.2em;
+
 
 }
 
 #inquiries-leftside {
   /* border: 2px solid blue; */
   color: white;
-  width: 50%;
+  /* width: 50%; */
   padding: 4vw;
 }
 
@@ -193,13 +198,15 @@ header a:hover {
 #the-form {
   /* border: 2px solid orange; */
   padding: 1em;
-  padding-right: 3em;
-  padding-left: 3em;
+  /* padding-right: 3em; */
+  /* padding-left: 3em; */
   /* height: 200px; */
 }
 
 #form-line1 {
   display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 #form-button {
@@ -213,67 +220,71 @@ header a:hover {
   /* border: 2px solid purple; */
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 1.5em;
 }
-
+/* 
 #form-line1 {
-  margin-bottom: 15px;
-}
+  margin-bottom: 1em;
+} */
 
 #firstname {
-  width: 300px;
-  height: 30px;
-  margin-right: 10px;
-  border-radius: 5px;
+  width: 40em;
+  height: 3em;
+  border-radius: .3em;
+  margin-bottom: 1em;
 
 }
 
 #lastname {
-  width: 300px;
-  height: 30px;
-  border-radius: 5px;
+  width: 40em;
+  height: 3em;
+  border-radius: .3em;
+  margin-bottom: 1em;
 }
-
+/* 
 #form-line2 {
   margin-bottom: 15px;
-}
+} */
 
 #email {
-  width: 300px;
-  height: 30px;
-  margin-right: 10px;
-  border-radius: 5px;
+  width: 40em;
+  height: 3em;
+  border-radius: .3em;
+  margin-bottom: 1em;
 }
 
 #phone {
-  width: 300px;
-  height: 30px;
-  border-radius: 5px;
+  width: 40em;
+  height: 3em;
+  border-radius: .3em;
+  margin-bottom: 1em;
 }
-
+/* 
 #form-line3 {
   margin-bottom: 15px;
-}
+} */
 
 #date {
-  width: 300px;
-  height: 30px;
+  width: 40em;
+  height: 3em;
   margin-right: 10px;
-  border-radius: 5px;
+  border-radius: .3em;
+  margin-bottom: 1em;
 
 }
 
 #size {
-  width: 300px;
-  height: 30px;
-  border-radius: 5px;
+  width: 40em;
+  height: 3em;
+  border-radius: .3em;
+  margin-bottom: 1em;
 
 }
 
 #additional {
-  width: 100%;
-  height: 80px;
-  border-radius: 5px;
+  width: 40em;
+  height: 10em;
+  border-radius: .3em;
 }
 
 /* Form Section Div above */
@@ -346,7 +357,7 @@ font-weight: 700;
   display:none;
 }
 #business-image{
-  background-color: black;
+  background-color: rgb(37, 36, 36);
 }
 
 #business-img{
@@ -394,7 +405,7 @@ grid-row-gap: 0;
   }
 
 #text-about-container{
-  background-color: black;
+  background-color: rgb(37, 36, 36);
   color: white;
   text-align: center;
   font-size: 1.2em;
@@ -425,13 +436,27 @@ text-align: center;
   padding-top:.5em;
   
  }
+ .club-menu-button{
+  margin-top: -1.5em;
+  height:2em;
+  width: 3em;
+ z-index: 1;
+ font-size: 3em;
+ background-color: transparent;
+ color: white;
+ border: 2px solid white;
+ text-align: center;
+ padding-top:.15em;
+ padding-bottom:.35em;
+}
+ 
 
  #resteraunt-chef{
   margin-top: -7.2em;
  }
 
  .text-chef-container{
-  background-color: black;
+  background-color:rgb(37, 36, 36);
   color: white;
   text-align: center;
   font-size: 1.2em;
@@ -447,7 +472,7 @@ text-align: center;
 .art-head{
   margin: 0;
   color: white;
-  background-color: black;
+  background-color: rgb(37, 36, 36);
 font-size: 1.5em;
 text-align: center;
 height:3em;
@@ -466,7 +491,7 @@ height:3em;
 .gallery-head{
   margin: 0;
   color: white;
-  background-color: black;
+  background-color: rgb(37, 36, 36);
   font-size: 1.5em;
   text-align: center;
   height:2em;
